<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#6aa457"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/photo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/empty" >

    </ImageView>

     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp" >

     	 <TextView
     	     android:id="@+id/name"
     	     android:layout_width="wrap_content"
     	     android:layout_height="wrap_content"
     	     android:layout_marginLeft="10dp"
     	     android:text="@string/item_name"
     	     android:textColor="#F8EAD8"
     	     android:textSize="15sp" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_marginLeft="10dp"
            android:text="@string/item_desc"
            android:textColor="#000000"
            android:textSize="11sp" />
    </RelativeLayout>
</LinearLayout>
