<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="#2B5F00"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:textColorHint="#F8EAD8"
        android:layout_below="@+id/logo"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:background="@drawable/edit_text_selector"
        android:ems="10"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/password"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="14sp"
        android:background="@drawable/edit_text_selector"
        android:textColorHint="#F8EAD8"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/check_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="5dp"
        android:text="@string/check_remember" />

    <Button
        android:background="@drawable/skip_button"
        android:id="@+id/skip_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/check_remember"
        android:text="@string/skip" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/skip_button"
        android:layout_alignLeft="@+id/login"
        android:background="@drawable/login_button"
        android:text="@string/login" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/llogo" />

</RelativeLayout>