<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B5F00"
    android:contentDescription="@string/name"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddProduct" >

    <ImageView
        android:id="@+id/prod_img"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:clickable="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/logo"
        android:background="@drawable/skip_button"
        android:src="@drawable/ic_launcher" />

    
    <EditText
        android:id="@+id/prod_sugar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prod_kcal"
        android:layout_below="@+id/prod_kcal"
        android:textColorHint="#F8EAD8"
        android:layout_marginTop="15dp"
        android:background="@drawable/add_product_edits"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/in_sugar" />

    <Button
        android:id="@+id/prod_add_button"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/login_button"
        android:text="@string/add_prod" />

    <EditText
        android:id="@+id/prod_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/prod_add_button"
        android:layout_alignLeft="@+id/prod_sugar"
        android:layout_below="@+id/textView1"
        android:layout_marginBottom="10dp"
        android:textColorHint="#F8EAD8"
        android:background="@drawable/add_product_edits"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textView1"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prod_desc"
        android:layout_below="@+id/prod_sugar"
        android:layout_marginTop="15dp"
        android:hint="@string/desc_prod"
        android:text="@string/desc_prod" />

    <TextView
        android:id="@+id/textView2"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prod_kcal"
        android:layout_below="@+id/prod_img"
        android:layout_marginTop="15dp"
        android:text="@string/add_in_calories" />

    <EditText
        android:id="@+id/prod_kcal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColorHint="#F8EAD8"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="numberDecimal"
        android:background="@drawable/add_product_edits"
        android:hint="@string/in" />

    <Spinner
        android:id="@+id/prod_in"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/prod_kcal"
        android:layout_alignRight="@+id/prod_sugar"
        android:layout_alignTop="@+id/prod_kcal"
        android:layout_marginLeft="15dp"
        android:textColor="#F8EAD8"
        android:background="@drawable/spin2_add"
        android:layout_toRightOf="@+id/prod_kcal" />

    <EditText
        android:id="@+id/prod_name"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/prod_img"
        android:layout_alignRight="@+id/prod_in"
        android:layout_marginBottom="25dp"
        android:background="@drawable/add_product_edits"
        android:ems="10"
        android:hint="@string/name"
        android:textColorHint="#F8EAD8" />
</RelativeLayout>